--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
+        <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/flick/jquery-ui.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Weather Dashboard</title>
     </head>
@@ -22,7 +23,7 @@
                 <form class="row pb-3 mb-3">
                     <h4 class="font-weight-bold">Search for a City: </h4>
                     <!-- <div class="form-group"> -->
-                        <input type="text" class="form-control text-align mb-3" id="cityInput" placeholder="Enter city name">
+                        <input type="text" class="form-control text-align mb-3" id="cityInput" placeholder="Enter a city name">
                         
                     <!-- </div> -->
                     <button type="submit" class="btn-search btn-block" id="btn-search">Search</button>
@@ -46,4 +47,8 @@
             </div>
         </div>
     </body>
+    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </html>
