--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                         <input type="text" class="form-control text-align mb-3" id="cityInput" placeholder="Enter a city name">
                         
                     <!-- </div> -->
-                    <button type="submit" class="btn-search btn-block" id="btn-search">Search</button>
+                    <button type="submit" class="btn-search color-blue btn-block" id="btn-search">Search</button>
                 
                 </form>
                 <!-- Search history -->
-                <div class="row">
-                    <h4 class="font-weight-bold">Placeholder - CityName</h4>
+                <div class="row" id="hist">
+                    <!-- <button type="button" class="btn-search color-gray btn-block" id="btn-search">Placeholder - CityName</button> -->
                 </div>
             </div>
         <!-- Weather Dashboard -->
