add placeholder along with style for current and future weather condition

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <header class="jumbotron m-2">
             <h2 class="display-6 text-center font-weight-bold">Weather Dashboard</h2>
         </header>
-        <div class="row d-flex justify-content-between m-2">
+        <div class="row d-flex m-2">
         <!-- Search for a City -->
-            <div class="col-3">
+            <div class="col-3 mr-4">
                 <!-- Search box -->
                 <form class="row pb-3 mb-3">
                     <h4 class="font-weight-bold">Search for a City: </h4>
@@ -34,14 +34,49 @@
                 </div>
             </div>
         <!-- Weather Dashboard -->
-            <div class="col-6">
+            <div class="col m-2 d-flex flex-column">
                 <!-- Weather on current date -->
-                <div class="row">
-                    <h4 class="text-center font-weight-bold">Weather on current date </h4>
+                <div class="row border border-secondary d-flex flex-column">
+                    <h4 class="p-2 font-weight-bold">Los Angelas (10/22/2022)</h4>
+                    <p class="px-2">Temp: 76.62 °F</p>
+                    <p class="px-2">Wind: 8.43 MPH</p>
+                    <p class="px-2">Humidity: 44 %</p>
                 </div>
                 <!-- Weather in future -->
-                <div class="row">
-                    <h4 class="text-center font-weight-bold">5-Day Forecast</h4>
+                <div class="row mt-3 mb-2 d-flex flex-column">
+                    <h4 class="font-weight-bold">5-Day Forecast</h4>
+                    <div class="p-0 col d-flex flex-row justify-content-between">
+                        <div class="pr-2 color-darkBlue">
+                            <h5 class="p-2 font-weight-bold">10/23/2022</h5>
+                            <p class="px-2">Temp: 76.62 °F</p>
+                            <p class="px-2">Wind: 8.43 MPH</p>
+                            <p class="px-2">Humidity: 44 %</p>
+                        </div>
+                        <div class="pr-2 color-darkBlue">
+                            <h5 class="p-2 font-weight-bold">10/24/2022</h5>
+                            <p class="px-2">Temp: 76.62 °F</p>
+                            <p class="px-2">Wind: 8.43 MPH</p>
+                            <p class="px-2">Humidity: 44 %</p>
+                        </div>
+                        <div class="pr-2 color-darkBlue">
+                            <h5 class="p-2 font-weight-bold">10/25/2022</h5>
+                            <p class="px-2">Temp: 76.62 °F</p>
+                            <p class="px-2">Wind: 8.43 MPH</p>
+                            <p class="px-2">Humidity: 44 %</p>
+                        </div>
+                        <div class="pr-2 color-darkBlue">
+                            <h5 class="p-2 font-weight-bold">10/26/2022</h5>
+                            <p class="px-2">Temp: 76.62 °F</p>
+                            <p class="px-2">Wind: 8.43 MPH</p>
+                            <p class="px-2">Humidity: 44 %</p>
+                        </div>
+                        <div class="pr-2 color-darkBlue">
+                            <h5 class="p-2 font-weight-bold">10/27/2022</h5>
+                            <p class="px-2">Temp: 76.62 °F</p>
+                            <p class="px-2">Wind: 8.43 MPH</p>
+                            <p class="px-2">Humidity: 44 %</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
