get future data and display it

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <!-- Weather in future -->
                 <div class="row mt-3 mb-2 d-flex flex-column">
                     <h4 class="font-weight-bold">5-Day Forecast</h4>
-                    <div class="p-0 col d-flex flex-row justify-content-between">
-                        <div class="pr-2 color-darkBlue">
+                    <div id="future" class="p-0 col d-flex flex-row justify-content-between">
+                        <!-- <div class="pr-2 color-darkBlue">
                             <h5 class="p-2 font-weight-bold">10/23/2022</h5>
                             <p class="px-2">Temp: 76.62 °F</p>
                             <p class="px-2">Wind: 8.43 MPH</p>
@@ -75,7 +75,7 @@
                             <p class="px-2">Temp: 76.62 °F</p>
                             <p class="px-2">Wind: 8.43 MPH</p>
                             <p class="px-2">Humidity: 44 %</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
