adjust style when nothing searched;clean coding of log

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Weather Dashboard -->
             <div class="col m-2 d-flex flex-column">
                 <!-- Weather on current date -->
-                <div id="current" class="row border border-secondary d-flex flex-column">
+                <div id="current" class="row border-secondary d-flex flex-column">
                     <h4 id="currentCityName" class="p-2 font-weight-bold"></h4>
                     <p id="currentTemp" class="px-2"></p>
                     <p id="currentWind" class="px-2"></p>
@@ -44,38 +44,8 @@
                 </div>
                 <!-- Weather in future -->
                 <div class="row mt-3 mb-2 d-flex flex-column">
-                    <h4 class="font-weight-bold">5-Day Forecast</h4>
+                    <h4 id="future-title" class="font-weight-bold">5-Day Forecast: </h4>
                     <div id="future" class="p-0 col d-flex flex-row justify-content-between">
-                        <!-- <div class="pr-2 color-darkBlue">
-                            <h5 class="p-2 font-weight-bold">10/23/2022</h5>
-                            <p class="px-2">Temp: 76.62 °F</p>
-                            <p class="px-2">Wind: 8.43 MPH</p>
-                            <p class="px-2">Humidity: 44 %</p>
-                        </div>
-                        <div class="pr-2 color-darkBlue">
-                            <h5 class="p-2 font-weight-bold">10/24/2022</h5>
-                            <p class="px-2">Temp: 76.62 °F</p>
-                            <p class="px-2">Wind: 8.43 MPH</p>
-                            <p class="px-2">Humidity: 44 %</p>
-                        </div>
-                        <div class="pr-2 color-darkBlue">
-                            <h5 class="p-2 font-weight-bold">10/25/2022</h5>
-                            <p class="px-2">Temp: 76.62 °F</p>
-                            <p class="px-2">Wind: 8.43 MPH</p>
-                            <p class="px-2">Humidity: 44 %</p>
-                        </div>
-                        <div class="pr-2 color-darkBlue">
-                            <h5 class="p-2 font-weight-bold">10/26/2022</h5>
-                            <p class="px-2">Temp: 76.62 °F</p>
-                            <p class="px-2">Wind: 8.43 MPH</p>
-                            <p class="px-2">Humidity: 44 %</p>
-                        </div>
-                        <div class="pr-2 color-darkBlue">
-                            <h5 class="p-2 font-weight-bold">10/27/2022</h5>
-                            <p class="px-2">Temp: 76.62 °F</p>
-                            <p class="px-2">Wind: 8.43 MPH</p>
-                            <p class="px-2">Humidity: 44 %</p>
-                        </div> -->
                     </div>
                 </div>
             </div>
