--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <div class="col m-2 d-flex flex-column">
                 <!-- Weather on current date -->
                 <div id="current" class="row border-secondary d-flex flex-column">
-                    <h4 id="currentCityName" class="p-2 font-weight-bold"></h4>
+                    <div class="d-flex flex-row">
+                        <h4 id="currentCityName" class="p-2 font-weight-bold"></h4>
+                        <img id="wicon" src="" alt="Weather icon">
+                    </div>
                     <p id="currentTemp" class="px-2"></p>
                     <p id="currentWind" class="px-2"></p>
                     <p id="currentHumidity" class="px-2"></p>
