adjust style for icon and add application picture

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div id="current" class="row border-secondary d-flex flex-column">
                     <div class="d-flex flex-row">
                         <h4 id="currentCityName" class="p-2 font-weight-bold"></h4>
-                        <img id="wicon" src="" alt="Weather icon">
+                        <div id="icon-container"><img id="wicon" src="" alt="Weather icon"></div>
                     </div>
                     <p id="currentTemp" class="px-2"></p>
                     <p id="currentWind" class="px-2"></p>
