remove autocomplete function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form class="row pb-3 mb-3">
                     <h4 class="font-weight-bold">Search for a City: </h4>
                     <!-- <div class="form-group"> -->
-                        <input type="text" class="form-control text-align mb-3" id="cityInput" placeholder="Enter a city name">
+                        <input type="text" name="cityInput" class="form-control text-align mb-3" id="cityInput" placeholder="Enter a city name">
                         
                     <!-- </div> -->
                     <button type="submit" class="btn-search color-blue btn-block" id="btn-search">Search</button>
@@ -55,9 +55,10 @@
         </div>
     </body>
     
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script> -->
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script> -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </html>
